<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application strings -->
    <string name="app_name">Home Temp</string>
    <string name="action_settings">Preferences</string>
    <string name="temperature_title">Temperature</string>
    <string name="ideal_temperature_title">Enter Desired Temperature</string>
    <string name="barometer_title">Pressure</string>
    <string name="humidity_title">Humidity</string>
    <string name="temperature_c_unit">°C</string>
    <string name="temperature_f_unit">°F</string>
    <string name="barometer_kpa_unit">kPa</string>
    <string name="barometer_mbar_unit">mBar</string>
    <string name="barometer_inhg_unit">inHg</string>
    <string name="humidity_unit">%</string>

    <string name="register">Registration</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>


    <!-- Preference strings -->
    <string name="pref_temp_unit">Temperature unit</string>
    <string name="pref_baro_unit">Pressure unit</string>
</resources>

